scss/_settings_spacing.scss
// Options
$sticky-footer: false !default; // include sticky footer styling. Sets body to display: flex;
$pad-lists: true !default; // Adds padding to list items

// Typographic scale settings
$ms-ratio: 16 / 14 !default;
$sp-unit-ratio: 0.5 !default;

// Baseline grid settings
$sp-unit: 1rem * $sp-unit-ratio !default;

$line-heights: (
  h1: 7 * $sp-unit,
  h2: 6 * $sp-unit,
  h3: 5 * $sp-unit,
  h4: 4 * $sp-unit,
  h1-mobile: 6 * $sp-unit,
  h2-mobile: 5 * $sp-unit,
  h3-mobile: 4 * $sp-unit,
  h4-mobile: 3 * $sp-unit,
  default-text: 3 * $sp-unit,
  small: $sp-unit * 2
) !default;

// baseline nudges for type scale ratio of (16/14) squared
$nudges: (
  nudge--h1-large: 0.15rem,
  nudge--h4-large: 0,
  nudge--h1: 0.2rem,
  nudge--h2: 0.2rem,
  nudge--h3: 0.1rem,
  nudge--h4: 0.05rem,
  nudge--h1-mobile: 0.165rem,
  nudge--h2-mobile: 0.1rem,
  nudge--h3-mobile: 0.5rem,
  nudge--h4-mobile: 0.3rem,
  nudge--p: 0.4rem,
  nudge--small: 0.2rem
) !default;

//scaling factor
$multi: 2 !default;

////////////////////////////////////////////////////////
// Variables connecting spacings that should be identical

// top: nudge; bottom: unit - nudge; result: height = exact multiple of base unit
$spv-nudge: map-get($nudges, nudge--p) !default;
$spv-nudge-compensation: $sp-unit - $spv-nudge !default;

// 1. VERTICAL SPACING
// 1.1 Vertical spacing inside components
$spv-inner--x-small: $sp-unit * 0.5 !default; // buttons margins inside table,
$spv-inner--x-small--scaleable: $spv-inner--x-small * $multi !default;
$spv-inner--small: $sp-unit !default;
$spv-inner--scaleable: $sp-unit * $multi !default;
$spv-inner--medium: $sp-unit * 1.5 !default; //vertical padding in: navigation, tabs
$spv-inner--large: $sp-unit * 2;

// 1.2 Vertical spacing between components
$spv-outer--small: $sp-unit * 1 !default; //labels
$spv-outer--small-scaleable: $sp-unit * $multi !default;
$spv-outer--medium: $sp-unit * 2 !default;
$spv-outer--scaleable: $sp-unit * (1 + $multi) !default;

// 1.3 Vertical spacing between a group of components and its wrapper - strips, views, entire page
$spv-outer--shallow-scaleable: $sp-unit * 2 * $multi !default;
$spv-outer--regular-scaleable: $sp-unit * 2 * (2 + $multi) !default;
$spv-outer--deep-scaleable: $sp-unit * 2 * (4 + $multi) !default;

// 2. HORIZONTAL SPACING
// 2.1 Horizontal spacing inside components
$sph-inner--small: $sp-unit !default; // input-elements,
$sph-inner: $sp-unit * 2 !default; // buttons, accordions, tabs, menu, card padding, stepped-list bullet offset
$sph-inner--large: $sp-unit * 3 !default;
$sph-inner--x-large: $sp-unit * 5 !default;
// 2.2 Horizontal spacing outside components
$sph-outer: $sph-inner !default;
$sph-outer--large: $sp-unit * 3 !default; // checboxes, radios, list bullets

$sp-before: (
  h1: $sp-unit * 3,
  h2: $sp-unit * 3,
  h3: $sp-unit * 3,
  h4: $sp-unit * 3,
  p: $sp-unit * 3,
  h1-mobile: $sp-unit * 3,
  h2-mobile: $sp-unit * 3,
  h3-mobile: $sp-unit * 3,
  h4-mobile: $sp-unit * 3,
  muted: $sp-unit * 3
) !default;

$spv-p-after-heading-adjustment: #{$sp-unit * -1};

// space after element on desktop
$sp-after: (
  h1: $sp-unit * 3,
  h2: $sp-unit * 3,
  h3: $sp-unit * 3,
  h4: $sp-unit * 2,
  p: $sp-unit * 3,
  h1-mobile: $sp-unit * 2,
  h2-mobile: $sp-unit * 2,
  h3-mobile: $sp-unit * 2,
  h4-mobile: $sp-unit * 2,
  small: $sp-unit * 2,
  small--dense: $sp-unit * 2,
  default-text: $sp-unit
) !default;

$max-widths: (
  long: 60em,
  default: 38em,
  heading--long: 30em,
  heading--short: 20em
) !default;

$icon-sizes: (
  accordion: $sp-unit * 1.5,
  default: $sp-unit * 2,
  heading-icon--small: $sp-unit * 4,
  heading-icon--x-small: $sp-unit * 3,
  heading-icon: $sp-unit * 5,
  social: $sp-unit * 4,
  thumb--card: $sp-unit * 4,
  thumb--large: $sp-unit * 12,
  thumb--small: $sp-unit * 6,
  thumb: $sp-unit * 6
) !default;

// generic units
$sp-xx-small: $sp-unit * 0.25 !default;
$sp-x-small: $sp-unit * 0.5 !default;
$sp-small: $sp-unit !default;
$sp-medium: $sp-unit * 2 !default;
$sp-large: $sp-unit * 3 !default;
$sp-x-large: $sp-unit * 4 !default;
$sp-xx-large: $sp-unit * 5 !default;
$sp-xxx-large: $sp-unit * 6 !default;
$sp-xxxx-large: $sp-unit * 8 !default;
$sp-xxxxx-large: $sp-unit * 12 !default;

